--- a/index.html
+++ b/index.html
@@ -10,5 +10,15 @@
     <div id="root"></div>
     <div id="portal"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- email js -->
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init("E9LXZxPlYpHSSOFlB");
+      })();
+    </script>
   </body>
 </html>
